@@ -45,7 +45,8 @@ class Asset < ActiveRecord::Base
   include Mephisto::TaggableMethods
 
   belongs_to :site
-  has_attachment :storage => :file_system, :thumbnails => { :thumb => '120>', :tiny => '50>' }, :max_size => 30.megabytes
+  has_attachment :storage => :file_system, :thumbnails => { :thumb => '120>', :tiny => '50>' }, :max_size => 30.megabytes, 
+    :processor => (Object.const_defined?(:ASSET_IMAGE_PROCESSOR) ? ASSET_IMAGE_PROCESSOR : nil)
   before_validation_on_create :set_site_from_parent
   validates_presence_of :site_id
   validates_as_attachment
